# duw-collector

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  LOOP.md  Makefile  README.md  fake_response.json
.cache/clangd/index/: collector.cc.E0CDD752A58A64B4.idx  collector.h.3736328EB3380356.idx  database_service.cc.6E659A6137CC93C5.idx  database_service.h.A83929BDB1BDA350.idx  db_connection.cc.7747D1DAA0BCDED1.idx  db_connection.h.CFF518FA33814B93.idx  env_service.cc.F66BE6262E983FE1.idx  env_service.h.7E1436900D854975.idx  github_service.cc.687DD20542D59319.idx  github_service.h.359799D65219840A.idx  http_client.cc.E8B8BE87B0EF05A5.idx  http_client.h.E521453E3BCC4589.idx  main.cc.8918A99A5EC85CC1.idx
.github/workflows/: issue-monitor.yml
agent/: AGENT_WORKFLOW.md  CODE_CONVENTIONS.md  VERIFY.md
scripts/: README.md  autonomous_agent.sh  build-linux.sh  build-macos.sh  build-windows.bat  build-windows.ps1  build.sh  check_issues.sh  setup_autonomous_cron.sh  setup_toolchain.sh
src/: collector.cc  collector.h  config_service.h  data_parser.h  data_storage.h  database_service.cc  database_service.h  db_connection.cc  db_connection.h  env_service.cc  env_service.h  github_service.cc  github_service.h  http_client.cc  http_client.h  json_parser.cc  json_parser.h  main.cc
src/app/: main.cc
src/core/: collector.cc  collector.h
src/data/: db_connection.h
src/services/: database_service.cc  database_service.h  env_service.cc  env_service.h  github_service.cc  github_service.h  http_client.cc  http_client.h
